Bug 417239 - Auto hide panel mode of Latte Dock "flickers" when bringing up the Application Menu widget
Summary: Auto hide panel mode of Latte Dock "flickers" when bringing up the Applicatio...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.8.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-06 16:55 UTC by Davi
Modified: 2020-02-08 21:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.9
Sentry Crash Report:


Attachments
video showing the observed result (1.84 MB, video/mp4)
2020-02-06 16:55 UTC, Davi
Details
Latte layouts file (6.29 KB, application/zip)
2020-02-06 19:35 UTC, Davi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Davi 2020-02-06 16:55:47 UTC
Created attachment 125716 [details]
video showing the observed result

Whenever using latte dock in panel mode with the dodge all windows option, the panel will act slightly weird when being brought down by activating the cascading Application Menu widget.


STEPS TO REPRODUCE
1. Create a panel mode dock with latte, and set it dodge all windows
2. Enable the meta key as the application menu shortcut via the layout settings
3. Maximize a window
4. Activate the application menu by pressing the meta key

OBSERVED RESULT

The panel drops down, quickly goes halfway back up before dropping down again and activating the widget.

EXPECTED RESULT

The panel should drop down and then open the widget without any further animation.

SOFTWARE/OS VERSIONS
Distro: Arch Linux
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Comment 1 Michail Vourlakos 2020-02-06 18:15:03 UTC
Send your Latte layout file
Comment 2 Davi 2020-02-06 19:35:33 UTC
Created attachment 125722 [details]
Latte layouts file
Comment 3 Davi 2020-02-06 19:36:30 UTC
(In reply to Michail Vourlakos from comment #1)
> Send your Latte layout file

The layouts have been added as an attachment. I've sent all of them just to be sure, but I am using the default layout.
Comment 4 Michail Vourlakos 2020-02-08 21:30:39 UTC
Git commit 3220bfefbd1a80ba1529d5772c7af4a7312e50b8 by Michail Vourlakos.
Committed on 08/02/2020 at 21:28.
Pushed by mvourlakos into branch 'master'.

dont add meta view in hiding views

--when the user is triggering an application
launcher that is a popup in a hidden view
it is not needed to enforced hidden afterwards.
The blockHiding will be released automatically
when the application launcher popup is closed.

M  +0    -6    app/shortcuts/globalshortcuts.cpp

https://commits.kde.org/latte-dock/3220bfefbd1a80ba1529d5772c7af4a7312e50b8
Comment 5 Michail Vourlakos 2020-02-08 21:38:06 UTC
Git commit a2b714d307979af45dabc76cfcd3af1933131978 by Michail Vourlakos.
Committed on 08/02/2020 at 21:33.
Pushed by mvourlakos into branch 'v0.9'.

dont add meta view in hiding views

--when the user is triggering an application
launcher that is a popup in a hidden view
it is not needed to enforced hidden afterwards.
The blockHiding will be released automatically
when the application launcher popup is closed.
FIXED-IN:0.9.9

M  +0    -6    app/shortcuts/globalshortcuts.cpp

https://commits.kde.org/latte-dock/a2b714d307979af45dabc76cfcd3af1933131978