dont add meta view in hiding views

--when the user is triggering an application
launcher that is a popup in a hidden view
it is not needed to enforced hidden afterwards.
The blockHiding will be released automatically
when the application launcher popup is closed.

BUG:417239